# latitude-llm

./: .avanterules  .cursorignore  .cursorrules  .dockerignore  .env.example  .env.production  .gitignore  .mcp.json  .npmrc  .prettierrc  .prettierrcignore  .tmuxinator.yml  AGENTS.md  API_ENDPOINTS.md  CHANGELOG.md  Dockerfile  EVAL_ISSUE_GENERATION.md  LICENSE  PLAN  PLAN-create-datasets-from-traces.md  PRD.md  README.md  SECURITY.md  V2_PLAN.md  biome.json  brainstorm.md  build-local.sh  compound-engineering.local.md  docker-compose.README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  docs.json  eslint.config.js  eslint.config.mjs  index.mdx  knip.config.ts  knip.json  lititude  (+16 more)
.cursor/: environment.json  (+1 more)
apps/engine/: .gitignore  README.md  pyproject.toml
apps/engine/app/: __init__.py  main.py
apps/engine/app/core/: __init__.py  gepa.py  shared.py
apps/engine/app/env/: env.py
apps/engine/app/routers/: items.py
apps/engine/app/rpc/: __init__.py  protocol.py  server.py
apps/engine/app/util/: logger.py
apps/engine/docker/: Dockerfile
apps/engine/scripts/: lint.py
examples/: .env.example  README.md  package-lock.json  package.json  pyproject.toml  tracing.ts  tsconfig.json
examples/1-run-prompt/code/: runPromptExample.ts  run_prompt_example.py
examples/chat-app/: .env.example  README.md  config.ts  instrumentation.ts  package-lock.json  package.json  server.ts  tsconfig.json
examples/chat-app/handlers/: anthropic.ts  openai.ts  vercel.ts
examples/chat-app/public/: anthropic.html  index.html  vercel.html
examples/chat-app/services/: weather.ts
examples/nodejs-sdk-usage/: package.json  rollup.config.mjs  tsconfig.json
examples/nodejs-sdk-usage/src/: run.ts
examples/run-prompt/code/: runPromptExample.ts  run_prompt_example.py
examples/run-prompt/prompts/: run-prompt.md
examples/scripts/docs/: buildDocs.ts  buildMarkdown.ts
examples/sdks/python/: README.md  create_prompt.py  evaluate_chat.py  get_prompt.py  pyproject.toml  requirements.txt  run_prompt.py  setup.cfg  upload_logs.py
examples/sdks/python/providers/: anthropic.py  openai.py  with_anthropic.py  with_openai.py
examples/sdks/python/util/: __init__.py  create_sdk.py
examples/sdks/typescript/: .env.example  README.md  annotate.ts  chain_calls.ts  create_prompt.ts  evaluate_chat.ts  hitl_evaluation.ts  package.json  push_logs.ts  rag.ts  run_document.ts  tsconfig.json
examples/sdks/typescript/src/: create-annotation-by-filter.ts  create-annotation-draft.ts  create-annotation.ts  env.ts  list-api-keys.ts
examples/sdks/typescript/telemetry/: anthropic.ts  openai.ts  openai_chained_calls.ts  shared.ts  vercel_ai_chained_calls.ts
examples/src/cases/content-moderation-system/: doc.md  example.ts  main.promptl  rule_checker.promptl  safety_scorer.promptl  toxicity_evaluator.promptl
examples/src/cases/customer-support-email/: customer_researcher.promptl  doc.md  email_composer.promptl  example.ts  main.promptl
examples/src/cases/customer-support-quality-assurance/: doc.md  main.promptl
examples/src/cases/startup-analysis/: main.promptl
examples/src/cases/stock-market-analysis/: doc.md  main.promptl  market_researcher.promptl  price_analyzer.promptl
examples/src/examples/annotate-log/: doc.md  example.promptl  example.py  example.ts
examples/src/examples/create-log/: doc.md  example.md  example.py  example.ts
examples/src/examples/create-prompt/: doc.md  example.py  example.ts
examples/src/examples/get-all-prompts/: doc.md  example.md  example.py  example.ts
examples/src/utils/: help.ts
examples/utils/javascript/: index.ts
examples/utils/python/: __init__.py
(+5244 files in other folders)
