[project]
name = "latitude-python-examples"
version = "1.0.0"
requires-python = ">=3.9, <3.14"
dependencies = [
    "openai>=1.107.3",
    "devtools>=0.12.2",
    "python-dotenv>=1.1.1",
    "latitude-sdk>=5.4.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "off"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false
reportPrivateUsage = false

[tool.ruff]
target-version = "py39"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pyright>=1.1.405", "ruff>=0.13.0"]

# Use monorepo version of the SDK
# [tool.uv.sources]
# latitude-sdk = { path = "../../../packages/sdks/python" }
