[project]
name = "latitude-engine"
version = "0.1.0"
description = "Latitude AI Engine"
requires-python = ">=3.13, <3.14"
dependencies = [
    "gepa>=0.0.24",
    "pydantic>=2.11.9",
    "typing-extensions>=4.15.0",
    "promptl-ai>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "respx>=0.22.0",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
    "sh>=2.2.2",
    "psutil>=7.0.0",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false
reportPrivateUsage = false
reportPrivateImportUsage = false

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "W", "UP"]
ignore = [
    "F401",
    "F403",
    # Needed because unnecessary str() on field aliases are needed
    # https://docs.pydantic.dev/2.8/concepts/fields/#field-aliases
    "UP018",
    # Needed because typing.List and typing.Dict are semi-deprecated
    # in new Python versions but we want to maintain compatibility
    "UP006",
    "UP035",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-p no:warnings -n auto"
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
